tests/ensure_parsed_saved_state_deleted_file/ensure_parsed_saved_state_deleted_file.exp
==== No errors at start====
No errors!

The Flow server is currently in filesystem lazy mode and is only checking 0/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes


==== ensure_parsed notices that A was removed ====
NOTE: This error message has been modified to remove the full file path.
Error -------------------------------------------------------------------------------------------------------- B.js:1:17

Cannot resolve module `A.js`. [cannot-resolve-module]

   1| import {A} from './A';
                      ^^^^^



Found 1 error

The Flow server is currently in filesystem lazy mode and is only checking 1/1 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
